figuring out how to debug

--- a/asm/x86/Makefile
+++ b/asm/x86/Makefile
@@ -3,13 +3,14 @@
 
 f01 = "01_hello_world.asm"
 f02 = "02_data_section.asm"
+f03 = "03_addressing.asm"
 
-curr = $(f02)
+curr = $(f03)
 
 exec: 
 	nasm -f elf32 -o obj.o $(curr)
-	ld -m elf_i386 -o exec.elf obj.o
-	./exec.elf
+	ld -m elf_i386 -o exec.out obj.o
+	./exec.out
 
 clean:
 	rm obj.o
