--- a/asm/x86/Makefile
+++ b/asm/x86/Makefile
@@ -5,10 +5,10 @@ f01 = "01_hello_world.asm"
 f02 = "02_data_section.asm"
 f03 = "03_addressing.asm"
 
-curr = $(f03)
+curr = $(f02)
 
 exec: 
-	nasm -f elf32 -o obj.o $(curr)
+	nasm -f elf32 -g -o obj.o $(curr)
 	ld -m elf_i386 -o exec.out obj.o
 	./exec.out
 
