gdb commom commands

--- a/asm/x86/Makefile
+++ b/asm/x86/Makefile
@@ -8,9 +8,13 @@ f03 = "03_addressing.asm"
 curr = $(f02)
 
 exec: 
-	nasm -f elf32 -g -o obj.o $(curr)
+	nasm -f elf32 -o obj.o $(curr)
 	ld -m elf_i386 -o exec.out obj.o
 	./exec.out
+debug:
+	nasm -f elf32 -g -o debug_obj.o $(curr)
+	ld -m elf_i386 -o debug_exec.out debug_obj.o
+	./debug_exec.out
 
 clean:
 	rm obj.o
