understanding qualifiers in c

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,9 +1,9 @@
 f1 = "01-preproc.c" 
 f2 = "02-data-types.c"
-# f3 = 
+f3 = "03-qualifiers.c" 
 # f4 = 
 
-curr = $(f2)
+curr = $(f3)
 
 exec:  
 	gcc $(curr) -c -o obj.o
