in built c data types

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,17 +1,9 @@
 f1 = "01-preproc.c" 
 f2 = "02-data-types.c"
 f3 = "03-qualifiers.c" 
-# f4 = 
+f4 = "04-struction.c" 
 
-curr = $(f2)
-
-f3:
-	gcc $(f3) 03-qualifiers-test.c -o exec.out
-	./exec.out
-
-dbdf3:
-	gcc -g  $(f3) 03-qualifiers-test.c -o exec.out
-	./exec.out
+curr = $(f4)
 
 exec:  
 	gcc $(curr) -c -o obj.o
@@ -21,6 +13,14 @@ exec:
 debug:
 	gcc $(curr) -g -o debug-exec.out
 	./debug-exec.out
+
+f3:
+	gcc $(f3) 03-qualifiers-test.c -o exec.out
+	./exec.out
+
+dbdf3:
+	gcc -g  $(f3) 03-qualifiers-test.c -o exec.out
+	./exec.out
 
 clean:
 	rm ./*.o
